# miden-arena

./: .gitignore  Cargo.toml  Design.md  LICENSE  README.md  VerificationService.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
assets/: Cargo-f372c2d2-f372c2d2-D-4vVzqw.js  index-BYK_MD-i.css  index-B_dh5Jxn.js  index-CJYorbhs.js  index-Cgjkes2E.css  index-CoMt4Zwv.css  index-CrYkJ9Ja.js  index-D3YUjMZT.js  index-DVVoaKZD.js  index-DnVX3siU.js  index-L9yWyUDe.css  index-WIzUvvEA.js  index-bwg_mTCp.css  web-client-methods-worker-DDnwROU-.js
audio/music/: draft_1.m4a  menu_3.m4a
audio/sfx/: attack.m4a  ko.m4a  pick.m4a
audio/voices/: inferno.m4a  kraken.m4a  quake.m4a  storm.m4a  tide.m4a
contracts/arena-account/: Cargo.toml
contracts/arena-account/src/: lib.rs
contracts/arena-account/wit/: miden-arena-account.wit
contracts/combat-account/: Cargo.toml  init-storage.toml
contracts/combat-account-masm/: Cargo.toml
contracts/combat-account-masm/masm/: combat.masm  init_combat_note.masm  submit_move_note.masm
contracts/combat-account-masm/src/: lib.rs  main.rs
contracts/combat-account-masm/tests/: combat_tests.rs.bak
contracts/combat-account/src/: lib.rs
contracts/combat-account/wit/: miden-combat-account.wit
contracts/combat-test/: Cargo.toml  README.md
contracts/combat-test-broken/: Cargo.toml
contracts/combat-test-broken/src/: lib.rs
contracts/combat-test/src/: lib.rs
contracts/counter-test/: Cargo.toml  README.md
contracts/counter-test/src/: lib.rs
contracts/init-combat-note/: Cargo.toml
contracts/init-combat-note/src/: lib.rs
contracts/init-combat-note/wit/: init-combat-note.wit
contracts/matchmaking-account/: Cargo.toml  init-storage.toml
contracts/matchmaking-account/src/: lib.rs
contracts/matchmaking-account/wit/: miden-matchmaking-account.wit
contracts/process-result-note/: Cargo.toml
contracts/process-result-note/src/: lib.rs
contracts/process-result-note/wit/: process-result-note.wit
contracts/process-stake-note/: Cargo.toml
contracts/process-stake-note/src/: lib.rs
contracts/process-stake-note/wit/: process-stake-note.wit
contracts/process-team-note/: Cargo.toml
contracts/process-team-note/src/: lib.rs
contracts/process-team-note/wit/: process-team-note.wit
contracts/submit-move-note/: Cargo.toml
contracts/submit-move-note/src/: lib.rs
contracts/submit-move-note/wit/: submit-move-note.wit
crates/combat-engine/: Cargo.toml
crates/combat-engine/src/: champions.rs  codec.rs  combat.rs  damage.rs  elements.rs  lib.rs  pack.rs  types.rs
public/audio/music/: battle_1.m4a  battle_2.m4a  battle_3.m4a  draft_1.m4a  draft_2.m4a  menu_1.m4a  menu_2.m4a  menu_3.m4a
public/audio/sfx/: confirm.m4a  defeat.m4a  hit.m4a  select.m4a  victory.m4a
public/audio/voices/: boulder.m4a  ember.m4a  gale.m4a  phoenix.m4a  torrent.m4a
public/models/: boulder.attack1.glb  boulder.attack2.glb  boulder.death.glb  boulder.hit_reaction.glb  boulder.idle.glb  boulder.victory.glb  ember.attack1.glb  ember.attack2.glb  ember.death.glb  ember.hit_reaction.glb  ember.idle.glb  ember.victory.glb  gale.attack1.glb  gale.attack2.glb  gale.death.glb  gale.hit_reaction.glb  gale.idle.glb  gale.victory.glb  inferno.attack1.glb  inferno.attack2.glb  inferno.death.glb  inferno.hit_reaction.glb  inferno.idle.glb  inferno.victory.glb  kraken.attack1.glb  kraken.attack2.glb  kraken.death.glb  kraken.hit_reaction.glb  kraken.idle.glb  kraken.victory.glb  phoenix.attack1.glb  phoenix.attack2.glb  phoenix.death.glb  phoenix.hit_reaction.glb  phoenix.idle.glb  phoenix.victory.glb  quake.attack1.glb  quake.attack2.glb  quake.death.glb  quake.hit_reaction.glb  (+20 more)
scripts/: deploy.sh
src/: App.tsx  index.css  main.tsx  three-extend.ts
src/audio/: audioManager.ts
src/components/battle/: BattleHUD.tsx  BattleLog.tsx  ChampionSelector.tsx  CommitRevealStatus.tsx
src/components/draft/: DraftPool.tsx  DraftTimeline.tsx  TeamPreview.tsx  (+1 more)
src/constants/: champions.ts  contracts.ts  elements.ts  miden.ts  protocol.ts
src/engine/: codec.ts  combat.ts  commitment.ts  damage.ts  draft.ts
src/hooks/: useArenaState.ts  useCombatTurn.ts  useCommitReveal.ts  useDraft.ts  useMatchmaking.ts  useNoteDecoder.ts  useSessionWallet.ts  useStaking.ts
src/scenes/: AmbientParticles.tsx  ArenaEnvironment.tsx  ArenaScene.tsx  AttackEffect.tsx  ChampionModel.tsx  DraftBackground.tsx  DraftStage.tsx  ElementalAura.tsx  PostProcessing.tsx
src/screens/: ArenaSetupScreen.tsx  BattleScreen.tsx  DraftScreen.tsx  ErrorScreen.tsx  GameOverScreen.tsx  LoadingScreen.tsx  LobbyScreen.tsx  PreBattleLoadingScreen.tsx  SetupScreen.tsx  TitleScreen.tsx
src/store/: gameStore.ts  selectors.ts
src/types/: game.ts  index.ts  protocol.ts
src/utils/: arenaNote.ts  bytes.ts  deviceCapabilities.ts  formatting.ts  persistence.ts  sounds.ts
tasks/: lessons.md  todo.md
(+20 files in other folders)
