[package]
name = "arena_account"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { version = "0.10" }
combat-engine = { path = "../../crates/combat-engine", default-features = false }

[package.metadata.component]
package = "miden:arena-account"

[package.metadata.miden]
project-kind = "account"
supported-types = ["RegularAccountUpdatableCode"]
