[package]
name = "submit-move-note"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { version = "0.10" }

[package.metadata.component]
package = "miden:submit-move-note"

[package.metadata.miden]
project-kind = "note-script"

[package.metadata.miden.dependencies]
"miden:combat-account" = { path = "../combat-account" }

[package.metadata.component.target.dependencies]
"miden:combat-account" = { path = "../combat-account/wit/miden-combat-account.wit" }
